[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delta_sdk"
version = "0.0.14"
authors = [
  { name="HqNw(ahmed reda)", email="redalabeb166@gmail.com" },
]
description = "A small package to help authenticate and use dulms api"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    ]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/HqNw/dulms_sdk"
"Bug Tracker" = "https://github.com/HqNw/dulms_sdk/issues"
